--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,44 @@
     "files.associations": {
         "stdio.h": "c",
         "__bit_reference": "c",
-        "bitset": "c"
+        "bitset": "c",
+        "iostream": "cpp",
+        "__config": "cpp",
+        "__locale": "cpp",
+        "__threading_support": "cpp",
+        "__verbose_abort": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "initializer_list": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "tuple": "cpp",
+        "typeinfo": "cpp",
+        "complex": "cpp",
+        "execution": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp",
+        "variant": "cpp",
+        "algorithm": "cpp"
     }
 }
